Fix dark mode for FbComments again

--- a/src/app/components/FbComments/FbComments.module.scss
+++ b/src/app/components/FbComments/FbComments.module.scss
@@ -1,5 +1,5 @@
 .root {
-  :root(:global(.night-mode)) & .target [fb-xfbml-state='rendered'] {
+  :root:global(.night-mode) & .target[fb-xfbml-state='rendered'] {
     filter: grayscale(100%) invert(1);
   }
 }
